--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,10 @@ MarkupSafe==0.23
 SQLAlchemy==1.0.11
 Werkzeug==0.11.3
 alembic==0.8.4
+beautifulsoup4==4.4.1
 gunicorn==19.4.5
 itsdangerous==0.24
+nltk==3.1
 psycopg2==2.6.1
 python-editor==0.5
+requests==2.9.1
