--- a/requirements.txt
+++ b/requirements.txt
@@ -9,9 +9,12 @@ SQLAlchemy==1.0.11
 Werkzeug==0.11.3
 alembic==0.8.4
 beautifulsoup4==4.4.1
+click==6.2
 gunicorn==19.4.5
 itsdangerous==0.24
 nltk==3.1
 psycopg2==2.6.1
 python-editor==0.5
+redis==2.10.5
 requests==2.9.1
+rq==0.5.6
